# neuralNetworks

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
Tests/: CMakeLists.txt  MatrixTests.cpp  NeuralNetworkTests.cpp  TestAssistant.h  TestCase.h  TestSuite.h  TestSuite.tpp  VectorTests.cpp  main.cpp  tests.cpp
src/Algebra/: CMakeLists.txt
src/Algebra/Matrix/: Matrix.cpp
src/Algebra/Vector/: Vector.cpp
src/Algebra/include/: Matrix.tpp  Vector.h
src/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.tpp  Vector.cpp  Vector.h
src/NeuralNetwork/: CMakeLists.txt  NeuralNetwork.h
src/NeuralNetwork/include/: NeuralNetwork.h
src/NeuralNetwork/src/: NeuralNetwork.cpp
src/Testing/: TestResult.h  TestSuite.h  TestSuite.tpp
